<resources>
    <string name="app_name">Helping Hand</string>


    <string name="admin">Admin Login</string>
    <string name="admin_login_page">Admin Login</string>
    <string name="admin_Enter_Email">Enter Email Id</string>
    <string name="admin_Enter_password">Enter Password</string>
    <string name="admin_dashboard_page">Admin Dashboard</string>


    <string name="menu_home">Home</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_notifications">Notifications</string>
    <string name="menu_settings">Settings</string>

    <string name="menu_history">History</string>


    <string name="notification_settings_fragment">Notification Setting</string>
    <string name="notification_Headline_notice">Manage your Notifications</string>
    <string name="notification_do_not_disturb">Do not Disturb</string>

    <string name="menu_organisations">Organizations</string>
    <string name="organization_Category">Organizations Category</string>
    <string name="title_organization">Title</string>


    <string name="organisation_details">Organization Details</string>

    <string name="organization_title_name">Title Name</string>
    <string name="organization_type_title">Organizations type</string>
    <string name="organization_type_description">organization type detail</string>


    <string name="organization_description_title">Description</string>
    <string name="organization_description_title_name">Title of organization</string>


    <string name="menu_favorite">Favorite</string>


    <string name="menu_share_app">Share App</string>
    <string name="menu_feedback">Feedback</string>


    <string name="menu_about">About Us</string>
    <string name="Version_number">Version 1.0</string>
    <string name="about_information">
        Helping Hand is an Android based application which is used
        for the online Charity Donations and to help people by contributing
        your valuable time to those flourishing NGOs which is always ready for the
        development of good fortune and successful social status of our Nation.
    </string>
    <string name="developed_by">Developed By:</string>
    <string name="developer_name_for_whole_project">KASK Group</string>


    <string name="menu_sign_out">Sign Out</string>


    <string name="profile_name">User Name</string>
    <string name="profile_email_id">Email Id</string>
    <string name="profile_mobile_number">Mobile Number</string>
    <string name="profile_date_of_birth">Date of Birth</string>
    <string name="profile_state">State</string>
    <string name="profile_city">City</string>
    <string name="profile_address">Address</string>
    <string name="profile_save_changes">Save Changes</string>


    <string name="feedback_title">Write a feedback here</string>
    <string name="feedback_hint">Please Enter Your Feedback Here...</string>
    <string name="send_feedback">Send Feedback</string>
</resources>

