<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <group
        android:id="@+id/menu_group"
        android:checkableBehavior="single">

        <item
            android:id="@+id/menu_home"
            android:title="@string/menu_home"
            android:icon="@drawable/ic_menu_home"/>

        <item
            android:id="@+id/menu_profile"
            android:title="@string/menu_profile"
            android:icon="@drawable/ic_menu_profile"/>

        <item
            android:title="@string/menu_notifications"
            android:id="@+id/menu_notifications"
            android:icon="@drawable/ic_menu_notifications"/>

        <item
            android:title="@string/menu_settings"
            android:id="@+id/menu_settings"
            android:icon="@drawable/ic_menu_setting"/>
    </group>

    <item
        android:id="@+id/menu_history"
        android:title="@string/menu_history"
        android:icon="@drawable/ic_menu_history" />

    <item
        android:id="@+id/menu_organization"
        android:title="@string/menu_organisations"
        android:icon="@drawable/ic_menu_organizations" />

    <item
        android:id="@+id/menu_fav"
        android:title="@string/menu_favorite"
        android:icon="@drawable/ic_menu_fav" />

    <item
        android:title="@string/menu_feedback"
        android:id="@+id/menu_feedback"
        android:icon="@drawable/ic_menu_feedback" />

    <item
        android:title="@string/menu_share_app"
        android:id="@+id/menu_share_app"
        android:icon="@drawable/ic_menu_share" />

    <item
        android:id="@+id/menu_about"
        android:title="@string/menu_about"
        android:icon="@drawable/ic_menu_about" />

    <item
        android:title="@string/menu_sign_out"
        android:id="@+id/menu_Sign_out"
        android:icon="@drawable/ic_menu_sign_out"/>

</menu>