<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:maxWidth="1dp">

    <ImageView
        android:layout_width="75dp"
        android:layout_height="78dp"
        android:id="@+id/display_organization_list_category_image"
        android:scaleType="fitCenter"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/display_organization_list_category_image"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textAlignment="textStart"
        android:gravity="start"
        android:layout_marginLeft="10dp"
        android:hint="@string/organization_title_name"
        android:id="@+id/organization_list_category_Title_name"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/display_organization_list_category_image"
        android:layout_below="@id/organization_list_category_Title_name"
        android:hint="@string/organization_type_title"
        android:layout_marginTop="03dp"
        android:layout_marginLeft="10dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Subtitle"
        android:gravity="start"
        android:textAlignment="textStart"
        android:id="@+id/organisation_list_category_type_title_name"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/display_organization_list_category_image"
        android:layout_below="@id/organisation_list_category_type_title_name"
        android:hint="@string/organization_type_description"
        android:maxLines="1"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="03dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Subtitle"
        android:gravity="start"
        android:textAlignment="textStart"
        android:id="@+id/organisation_list_category_type_description"/>

</RelativeLayout>