<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.User.NotificationActivity">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/toolbar"
        android:textAlignment="center"
        app:title="@string/notification_settings_fragment"
        android:background="@color/background_blue"
        android:gravity="center_horizontal"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:layout_below="@id/toolbar"
        android:id="@+id/relative_notice_first">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/user_notification_notice"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textAlignment="textStart"
            android:gravity="start"
            android:text="@string/notification_Headline_notice"
            android:textStyle="bold|italic"
            android:layout_marginTop="15dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="textStart"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:layout_below="@+id/user_notification_notice"
            android:id="@+id/do_not_disturb"
            android:gravity="start"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/notification_do_not_disturb"
            android:layout_marginTop="15dp"/>

        <androidx.appcompat.widget.SwitchCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/user_notification_notice"
            android:layout_alignParentRight="true"
            android:layout_marginRight="15dp"
            android:layout_marginTop="20dp"
            android:theme="@style/MySwitch"
            android:id="@+id/switch_do_not_disturb"
            android:checked="false"
            android:layout_toRightOf="@id/do_not_disturb"/>



    </RelativeLayout>

</RelativeLayout>