<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:id="@+id/scrollView">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/relativeForScroll">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/layout_profile_image"
                android:padding="16dp"
                android:elevation="10dp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/ic_person"
                    android:id="@+id/profile_image"
                    app:civ_border_width="2dp"
                    app:civ_border_color="@android:color/darker_gray"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/profile_image"
                    android:layout_centerVertical="true"
                    android:id="@+id/profile_name"
                    android:hint="@string/profile_name"
                    android:layout_marginRight="16dp"
                    android:layout_marginLeft="25.7dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textStyle="bold"
                    android:textAlignment="textStart"
                    android:gravity="start" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/profile_image"
                    android:hint="@string/profile_email_id"
                    android:layout_below="@id/profile_name"
                    android:id="@+id/profile_email"
                    android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Subtitle"/>

            </RelativeLayout>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/background_blue"
                android:src="@drawable/ic_edit_black_24dp"
                android:tint="@android:color/white"
                android:layout_below="@id/layout_profile_image"
                android:layout_alignEnd="@id/layout_profile_image"
                android:id="@+id/edit_changes_fab"
                android:elevation="7dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="20dp"
                android:layout_alignRight="@id/layout_profile_image" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/edit_changes_fab"
                android:padding="16dp"
                android:layout_marginTop="5dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/profile_mobile_layout"
                    android:layout_marginTop="10dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/profile_mobile_number"
                        android:id="@+id/profile_mobile"
                        android:enabled="false"
                        android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Subtitle" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/profile_mobile_layout"
                    android:layout_marginTop="10dp"
                    android:id="@+id/profile_date_layout">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/profile_date_of_birth"
                        android:id="@+id/profile_date"
                        android:enabled="false"
                        android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Subtitle" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/profile_date_layout"
                    android:layout_marginTop="10dp"
                    android:id="@+id/profile_state_layout">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/profile_state"
                        android:id="@+id/profile_state"
                        android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Subtitle"
                        android:enabled="false"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/profile_state_layout"
                    android:layout_marginTop="10dp"
                    android:id="@+id/profile_city_layout">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/profile_city"
                        android:id="@+id/profile_city"
                        android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Subtitle"
                        android:enabled="false"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/profile_city_layout"
                    android:layout_marginTop="10dp"
                    android:id="@+id/profile_address_layout">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/profile_address"
                        android:enabled="false"
                        android:id="@+id/profile_address"
                        android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Subtitle" />

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/profile_address_layout"
                    android:id="@+id/btn_save_profile"
                    android:layout_marginTop="80dp"
                    android:background="@drawable/button_edit"
                    android:text="@string/profile_save_changes"
                    android:textColor="@android:color/white"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    android:layout_marginRight="35dp"
                    android:layout_marginLeft="35dp"
                    android:visibility="gone"/>

            </RelativeLayout>
        </RelativeLayout>
    </ScrollView>

    <com.tuyenmonkey.mkloader.MKLoader
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:mk_type="TwinFishesSpinner"
        android:layout_centerInParent="true"
        app:mk_color="@android:color/holo_blue_dark"
        android:id="@+id/loader"
        android:visibility="gone"/>

</RelativeLayout>