<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.User.AboutActivity">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_blue"
        android:id="@+id/toolbar">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/ic_back_arrow"
                android:scaleType="fitXY"
                android:layout_centerVertical="true"
                android:onClick="imageBack"
                android:id="@+id/image_back"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="About Us"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:layout_marginLeft="50dp"
                android:textColor="@android:color/white"/>
        </RelativeLayout>

    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        android:background="@color/white"
        android:id="@+id/scrollview_about_page">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/background_light"
            android:layout_below="@id/toolbar"
            android:layout_centerHorizontal="true"
            android:id="@+id/relative_about_layout">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:id="@+id/relative_about_layout_design">

                <ImageView
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_centerHorizontal="true"
                    android:id="@+id/imagelogo"
                    android:src="@drawable/donation_application_logo"
                    android:layout_marginTop="20dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/imagelogo"
                    android:layout_centerHorizontal="true"
                    android:text="@string/app_name"
                    android:textStyle="bold|italic"
                    android:layout_marginTop="20dp"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:id="@+id/text_app_name"
                    android:gravity="center_horizontal" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/text_app_name"
                    android:layout_marginTop="02dp"
                    android:text="@string/Version_number"
                    android:layout_centerHorizontal="true" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/text_app_name"
                    android:layout_marginTop="25dp"
                    android:text="@string/about_information"
                    android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Subtitle"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:id="@+id/textdesc"/>

            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:layout_below="@id/relative_about_layout_design"
                android:layout_marginTop="20dp"
                android:layout_centerHorizontal="true"
                android:textStyle="bold|italic"
                android:id="@+id/developer"
                android:text="@string/developed_by"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="05dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:id="@+id/developer_name_for_whole_project"
                android:text="@string/developer_name_for_whole_project"
                android:layout_below="@+id/developer" />


        </RelativeLayout>

    </ScrollView>

</RelativeLayout>