<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent"
    tools:context=".Activities.Admin.AdminLoginActivity">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/toolbar"
        app:title="@string/admin_login_page"
        app:titleMarginStart="20dp"
        android:background="@color/background_blue"
        app:titleTextColor="@android:color/white"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:id="@+id/login"
        android:padding="16dp"
        android:background="@color/white"
        android:layout_marginTop="30dp"
        android:layout_centerInParent="true">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:inputType="textEmailAddress"
            android:layout_marginTop="20dp"
            android:id="@+id/admin_login_email"
            android:paddingStart="20dp"
            android:paddingLeft="20dp"
            android:hint="@string/admin_Enter_Email"
            android:drawableLeft="@drawable/ic_phone"
            android:drawablePadding="15dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginTop="30dp"
            android:layout_below="@+id/admin_login_email"
            android:id="@+id/admin_login_password"
            android:paddingTop="20dp"
            android:paddingStart="20dp"
            android:paddingLeft="20dp"
            android:hint="@string/admin_Enter_password"
            android:inputType="textPassword"
            android:drawableLeft="@drawable/ic_lock"
            android:drawablePadding="15dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/login_Successful"
            android:layout_centerHorizontal="true"
            android:background="@color/colorPrimary"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="@android:color/white"
            android:text="Login"
            android:onClick="admin_login_to_home"
            android:padding="10dp"
            android:layout_marginTop="30dp"
            android:layout_below="@id/admin_login_password"
            android:paddingStart="20dp"
            android:paddingLeft="20dp" />

    </RelativeLayout>
</RelativeLayout>