<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Activities.User.FeedbackActivity">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_blue_light"
        android:id="@+id/toolbar">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/ic_back_arrow"
                android:scaleType="fitXY"
                android:layout_centerVertical="true"
                android:onClick="imageBack"
                android:id="@+id/image_back"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Send Feedback"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:layout_marginLeft="55dp"
                android:textColor="@android:color/white"/>

        </RelativeLayout>

    </androidx.appcompat.widget.Toolbar>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:layout_below="@id/toolbar">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feedback_title"
            android:layout_marginTop="50dp"
            android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Subtitle"
            android:layout_centerHorizontal="true"
            android:textColor="@android:color/black"
            android:id="@+id/textTitle"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textTitle"
            android:layout_marginTop="40dp"
            android:textColor="@color/black"
            android:hint="@string/feedback_hint"
            android:id="@+id/etFeedback"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="80dp"
            android:id="@+id/btnSubmitFeedback"
            android:background="@drawable/button_edit"
            android:text="@string/send_feedback"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="@color/white"/>

    </RelativeLayout>


    <com.tuyenmonkey.mkloader.MKLoader
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_centerInParent="true"
        app:mk_color="@android:color/holo_blue_dark"
        app:mk_type="TwinFishesSpinner"
        android:id="@+id/loader"
        android:visibility="gone"/>
</RelativeLayout>
